--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -57,7 +57,7 @@
 
         <section class="principal">
 
-            <h2 class="titulo-principal"><img src="/imágenes/fullstack-main/LOGO y PAGINA - PNG/ARCHIVOS WEB/Vivi_de_tu_creatividad.png" alt=""></h2>         
+            <h2 class="titulo-principal"><img src="imágenes/fullstack-main/LOGO y PAGINA - PNG/ARCHIVOS WEB/Vivi_de_tu_creatividad.png" alt=""></h2>         
     
             <p>Si sos artista o emprendedor cultural, te invitamos a que formes parte de nuestra comunidad online.</p>
     
