--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -72,13 +72,13 @@
         </section>
 
         <div class="redes">
-            <a href="https://www.instagram.com/"><img src="/imágenes/fullstack-main/LOGO y PAGINA - PNG/ARCHIVOS WEB/Social_Media_Instagram.png" alt=""></a>
+            <a href="https://www.instagram.com/"><img src="imágenes/fullstack-main/LOGO y PAGINA - PNG/ARCHIVOS WEB/Social_Media_Instagram.png" alt=""></a>
 
-            <a href="https://es-la.facebook.com/"><img src="/imágenes/fullstack-main/LOGO y PAGINA - PNG/ARCHIVOS WEB/Social_Media_Facebook.png" alt=""></a>
+            <a href="https://es-la.facebook.com/"><img src="imágenes/fullstack-main/LOGO y PAGINA - PNG/ARCHIVOS WEB/Social_Media_Facebook.png" alt=""></a>
 
-            <a href="https://twitter.com/?lang=es"><img src="/imágenes/fullstack-main/LOGO y PAGINA - PNG/ARCHIVOS WEB/Social_Media_Twiter.png" alt=""></a>
+            <a href="https://twitter.com/?lang=es"><img src="imágenes/fullstack-main/LOGO y PAGINA - PNG/ARCHIVOS WEB/Social_Media_Twiter.png" alt=""></a>
 
-            <a href="https://web.whatsapp.com/"><img src="/imágenes/fullstack-main/LOGO y PAGINA - PNG/ARCHIVOS WEB/Social_Media_Whatsapp.png" alt=""></a>
+            <a href="https://web.whatsapp.com/"><img src="imágenes/fullstack-main/LOGO y PAGINA - PNG/ARCHIVOS WEB/Social_Media_Whatsapp.png" alt=""></a>
         </div>
 
     </main>
