--- a/FrontEnd/artistas.html
+++ b/FrontEnd/artistas.html
@@ -71,22 +71,22 @@
 
                 <a href="visuales.html"><div class="sub-secciones">
                     <h3>Visuales</h3>
-                    <img src="/imágenes/video-camera.png" alt="">
+                    <img src="imágenes/video-camera.png" alt="">
                 </div></a>
 
                 <a href="musica.html"><div class="sub-secciones">
                     <h3>Música</h3>
-                    <img src="/imágenes/rock.png" alt="">
+                    <img src="imágenes/rock.png" alt="">
                 </div></a>
 
                 <a href="escenicas.html"><div class="sub-secciones">
                     <h3>Escénicas</h3>
-                    <img src="/imágenes/theatre.png" alt="">
+                    <img src="imágenes/theatre.png" alt="">
                 </div></a>
 
                 <a href="servicios.html"><div class="sub-secciones">
                     <h3>Servicios</h3>
-                    <img src="/imágenes/web-design.png" alt="">
+                    <img src="imágenes/web-design.png" alt="">
                 </div></a>
             </div>
         </div>
