--- a/FrontEnd/escenicas.html
+++ b/FrontEnd/escenicas.html
@@ -66,12 +66,12 @@
             <div>
                 <a href="templatemo_521_get_ready/index.html"><div class="logo-cat">
                     <h3>Actores</h3>
-                    <img src="/imágenes/hamlet.png" alt="">
+                    <img src="imágenes/hamlet.png" alt="">
                 </div></a>
 
                 <a href="templatemo_521_get_ready/index.html"><div class="logo-cat">
                     <h3>Directores</h3>
-                    <img src="/imágenes/director-chair.png" alt="">
+                    <img src="imágenes/director-chair.png" alt="">
                 </div></a>
 
             </div>
@@ -79,12 +79,12 @@
             <div>
                 <a href="templatemo_521_get_ready/index.html"><div class="logo-cat">
                     <h3>Guionistas</h3>
-                    <img src="/imágenes/typing.png" alt="">
+                    <img src="imágenes/typing.png" alt="">
                 </div></a>
 
                 <a href="templatemo_521_get_ready/index.html"><div class="logo-cat">
                     <h3>Obras de Teatro</h3>
-                    <img src="/imágenes/theatre.sc.png" alt="">
+                    <img src="imágenes/theatre.sc.png" alt="">
                 </div></a>
             </div>
 
