--- a/FrontEnd/musica.html
+++ b/FrontEnd/musica.html
@@ -66,13 +66,13 @@
             <div>
                 <a href="templatemo_521_get_ready/index.html"><div class="logo-cat">
                     <h3>Bandas</h3>
-                    <img src="/imágenes/microphone.png" alt="">
+                    <img src="imágenes/microphone.png" alt="">
                 </div></a>               
             </div>
             <div>
                 <a href="templatemo_521_get_ready/index.html"><div class="logo-cat">
                     <h3>Solistas</h3>
-                    <img src="/imágenes/concert.png" alt="">
+                    <img src="imágenes/concert.png" alt="">
                 </div></a>
             </div>
         </div>
