--- a/FrontEnd/visuales.html
+++ b/FrontEnd/visuales.html
@@ -66,12 +66,12 @@
             <div>
                 <a href="templatemo_521_get_ready/index.html"><div class="logo-cat">
                     <h3>Pintura - Grabado</h3>
-                    <img src="/imágenes/abstract.png" alt="">
+                    <img src="imágenes/abstract.png" alt="">
                 </div></a>
 
                 <a href="templatemo_521_get_ready/index.html"><div class="logo-cat">
                     <h3>Escultura</h3>
-                    <img src="/imágenes/sculpture.png" alt="">
+                    <img src="imágenes/sculpture.png" alt="">
                 </div></a>
 
             </div>
@@ -79,12 +79,12 @@
             <div>
                 <a href="templatemo_521_get_ready/index.html"><div class="logo-cat">
                     <h3>Fotografía</h3>
-                    <img src="/imágenes/photography.png" alt="">
+                    <img src="imágenes/photography.png" alt="">
                 </div></a>
 
                 <a href="templatemo_521_get_ready/index.html"><div class="logo-cat">
                     <h3>Video - Cine</h3>
-                    <img src="/imágenes/film-clapperboard.png" alt="">
+                    <img src="imágenes/film-clapperboard.png" alt="">
                 </div></a>
             </div>
         </div>
