--- a/FrontEnd/carrito.html
+++ b/FrontEnd/carrito.html
@@ -61,22 +61,22 @@
             <div>
                 <a href="templatemo_521_get_ready/index.html"><div class="sub-secciones">
                     <h3>Detalle de Compra</h3>
-                    <img src="/imágenes/lista-de-la-compra.png" alt="">
+                    <img src="imágenes/lista-de-la-compra.png" alt="">
                 </div></a>
                 
                 <a href="templatemo_521_get_ready/index.html"><div class="sub-secciones">
                     <h3> Modo de Entrega</h3>
-                    <img src="/imágenes/rastreo-de-orden.png" alt="">
+                    <img src="imágenes/rastreo-de-orden.png" alt="">
                 </div></a>
 
                 <a href="templatemo_521_get_ready/index.html"><div class="sub-secciones">
                     <h3> Medios de Pago</h3>
-                    <img src="/imágenes/pos-terminal.png" alt="">
+                    <img src="imágenes/pos-terminal.png" alt="">
                 </div></a>
 
                 <a href="templatemo_521_get_ready/index.html"><div class="sub-secciones">
                     <h3> Finalizar Compra</h3>
-                    <img src="/imágenes/carrito-de-compras.png" alt="">
+                    <img src="imágenes/carrito-de-compras.png" alt="">
                 </div></a>
             </div>            
         </div>
