--- a/FrontEnd/agenda.html
+++ b/FrontEnd/agenda.html
@@ -53,15 +53,14 @@
 
     </header>
 
-    <main>
-
+    <main>e
         <div class="caja_seccion">
             <h2>Agenda</h2>
 
             <p>Tenemos un gran abanico de eventos para que disfrutes. Podés ingresar en el botón de abajo y chequear las propuestas que tenemos para vos.</p>
 
             <div class="sub-secciones">
-                <h3><a href="">Venta de entradas</a></h3>
+                <a href="templatemo_521_get_ready/index.html"><h3>Venta de entradas</h3></a>
             </div>
 
             <div>
@@ -73,13 +72,13 @@
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="/imágenes/obradeteatro.jpg" class="d-block w-100" alt="...">
+                            <img src="imágenes/obradeteatro.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="/imágenes/showenvivo.jpg" class="d-block w-100" alt="...">
+                            <img src="imágenes/showenvivo.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="/imágenes/grabado.jpg" class="d-block w-100" alt="...">
+                            <img src="imágenes/grabado.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
